/*
Copyright 2022 Nokia.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

//import "google/protobuf/any.proto";

package resource;
option go_package = "github.com/nephio-project/ipam/pkg/resource/resourcepb";

service Resource {
  // create an index in the ressource backend
  rpc CreateIndex (ClaimRequest) returns (EmptyResponse) {}
  rpc DeleteIndex (ClaimRequest) returns (EmptyResponse) {}
  // services within an index in the resource backend
  rpc GetClaim (ClaimRequest) returns (ClaimResponse) {}
  rpc Claim (ClaimRequest) returns (ClaimResponse) {}
  rpc DeleteClaim (ClaimRequest) returns (EmptyResponse) {}
  rpc WatchClaim (WatchRequest) returns (stream WatchResponse) {}
}

message Instance {
  NSN nsn = 1;
}

message ClaimRequest {
  Header header = 1;
  string spec = 2;
  string expiryTime = 3;
}

message EmptyResponse{}

message ClaimResponse {
  Header header = 1;
  string spec = 2;
  string status = 3;
  StatusCode statusCode = 4;
  string expiryTime = 5;
}

message WatchResponse {
  Header header = 1;
  //string spec = 2;
  //string status = 3;
  StatusCode statusCode = 2;
  //string expiryTime = 3;
}

message WatchRequest {
  Header header = 1;
}

message Header {
  GVK gvk = 1;
  NSN nsn = 2;
  GVK ownerGvk = 3;
  NSN ownerNsn = 4;
}

message GVK {
  string group = 1;
  string version = 2;
  string kind = 3; 
}

message NSN {
  string namespace = 1;
  string name = 2;
}

enum StatusCode {
  Valid = 0; // the status is OK
  InValid = 1; // the entry is no longer in the system
  Unknown = 2; // means the client should refresh the status
}